objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Annual_Recurring_Total_Gross_Profit__c</fullName>
        <formula>Monthly_Recurring_Total_Gross_Profit__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Recurring Total Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Total_Price__c</fullName>
        <formula>Monthly_Recurring_Total_Price__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Recurring Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Date__c</fullName>
        <description>Story# 02533060</description>
        <label>Bookings Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculations_for_Picklist__c</fullName>
        <label>Calculations for Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Acculuated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMU__c</fullName>
        <description>Story# 02533060</description>
        <label>IMU %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <description>Story# 02533060</description>
        <label>Initiatives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CompuCom: Bus Wireless Plans</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Get-10</fullName>
                </value>
                <value>
                    <fullName>CompuCom: ITAD &amp; Resell</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Lifecycle Services</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Managed Mobile Expenses</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pursuit</fullName>
                </value>
                <value>
                    <fullName>Govt - Fed</fullName>
                </value>
                <value>
                    <fullName>GPO - Amerinet</fullName>
                </value>
                <value>
                    <fullName>GPO - MedAssets</fullName>
                </value>
                <value>
                    <fullName>GPO - Novation</fullName>
                </value>
                <value>
                    <fullName>HP Supply - Hardware Target</fullName>
                </value>
                <value>
                    <fullName>HP Target Account</fullName>
                </value>
                <value>
                    <fullName>HP White Space-TECH ONLY</fullName>
                </value>
                <value>
                    <fullName>Inscape Flip</fullName>
                </value>
                <value>
                    <fullName>Interiors Annuity</fullName>
                </value>
                <value>
                    <fullName>Interiors Pursuit</fullName>
                </value>
                <value>
                    <fullName>K-12 California Department of Education</fullName>
                </value>
                <value>
                    <fullName>K-12 Georgia Vision Project</fullName>
                </value>
                <value>
                    <fullName>K-12 One-to-One Initiatives</fullName>
                </value>
                <value>
                    <fullName>K-12 TCPN Strategy</fullName>
                </value>
                <value>
                    <fullName>TAP</fullName>
                </value>
                <value>
                    <fullName>TCPN - Education</fullName>
                </value>
                <value>
                    <fullName>TCPN - Local/State/Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Teknion Grandfathered</fullName>
                </value>
                <value>
                    <fullName>WIG</fullName>
                </value>
                <value>
                    <fullName>CDEF Rollout-Tech Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Product_sub_type__c</fullName>
        <formula>CreatedDate == Opportunity.Most_recent_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Product sub type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Total_Gross_Profit__c</fullName>
        <formula>Monthly_Recurring_Total_Price__c - ( Monthly_Recurring_Unit_Cost__c * Quantity )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Recurring Total Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Total_Price__c</fullName>
        <formula>Monthly_Recurring_Unit_Price__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Recurring Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Recurring Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Recurring Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment_Completed__c</fullName>
        <description>Story# 02533060</description>
        <label>Needs Assessment Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case# 02720329</description>
        <label>Non-Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Devices__c</fullName>
        <description>Story# 02533060</description>
        <label>Number of Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Story# 02533060</description>
        <label>Order Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Story# 02533060</description>
        <label>Order #</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case# 02533060</description>
        <label>Primary Competitor</label>
        <referenceTo>OpportunityCompetitor__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_BSD__c</fullName>
        <label>Selected BSD Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>CBFS</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Print Services</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_GT__c</fullName>
        <label>Selected GT Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>CBFS</fullName>
                </value>
                <value>
                    <fullName>Ergonomics</fullName>
                </value>
                <value>
                    <fullName>Furniture - Catalog</fullName>
                </value>
                <value>
                    <fullName>Furniture - Interiors</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Office Products</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Print Services</fullName>
                </value>
                <value>
                    <fullName>Print and Promo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manufacturer_OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case# 02722351</description>
        <label>Product Manufacturer/OEM</label>
        <referenceTo>Product_Manufacturer__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Subtype_BSD__c</fullName>
        <label>Opportunity Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_BSD__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3 Ply Masks</fullName>
                </value>
                <value>
                    <fullName>Accessories (Tech)</fullName>
                </value>
                <value>
                    <fullName>Accessories – Cabling</fullName>
                </value>
                <value>
                    <fullName>Accessories - I/O</fullName>
                </value>
                <value>
                    <fullName>Accessories - PC &amp; Server Upgrades</fullName>
                </value>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>Antibacterial Soap</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Audio / Video</fullName>
                </value>
                <value>
                    <fullName>Automatic Toner Replenishment (ATR)</fullName>
                </value>
                <value>
                    <fullName>Binding/Booklet Services</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Brand Identity</fullName>
                </value>
                <value>
                    <fullName>Breakroom</fullName>
                </value>
                <value>
                    <fullName>Cameras</fullName>
                </value>
                <value>
                    <fullName>Canon Hardware</fullName>
                </value>
                <value>
                    <fullName>Canon Services</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Checks, forms, Envelopes, and Stamps</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Coffee Solution</fullName>
                </value>
                <value>
                    <fullName>Collaborative Classroom</fullName>
                </value>
                <value>
                    <fullName>Computing - Chromebooks</fullName>
                </value>
                <value>
                    <fullName>Computing - Desktops</fullName>
                </value>
                <value>
                    <fullName>Computing - Laptops</fullName>
                </value>
                <value>
                    <fullName>Computing - Tablets</fullName>
                </value>
                <value>
                    <fullName>Computing - Workstations</fullName>
                </value>
                <value>
                    <fullName>Config-to-Order</fullName>
                </value>
                <value>
                    <fullName>Consulting and Campaign Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Subtype_GT__c</fullName>
        <label>Opportunity Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_GT__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 Ply Masks</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Antibacterial Soap</fullName>
                </value>
                <value>
                    <fullName>Automatic Toner Replenishment (ATR)</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Breakroom</fullName>
                </value>
                <value>
                    <fullName>Charging Carts</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Cleaning &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Disinfectant Wipes</fullName>
                </value>
                <value>
                    <fullName>Ergo Accessories</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
                <value>
                    <fullName>Hand Sanitizers</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Installation Services</fullName>
                </value>
                <value>
                    <fullName>Managed Inventory</fullName>
                </value>
                <value>
                    <fullName>Medical Carts</fullName>
                </value>
                <value>
                    <fullName>Monitor Mounts</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>N95 Masks</fullName>
                </value>
                <value>
                    <fullName>OEM Toner Fulfillment</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Online Brand Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other(s)</fullName>
                </value>
                <value>
                    <fullName>pMPS</fullName>
                </value>
                <value>
                    <fullName>Print/Promotional</fullName>
                </value>
                <value>
                    <fullName>Printers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Subtype__c</fullName>
        <description>Case# 02533060</description>
        <label>Opportunity Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3 Ply Masks</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Accessories (Tech)</fullName>
                </value>
                <value>
                    <fullName>Accessories – Cabling</fullName>
                </value>
                <value>
                    <fullName>Accessories - I/O</fullName>
                </value>
                <value>
                    <fullName>Accessories - PC &amp; Server Upgrades</fullName>
                </value>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>Antibacterial Soap</fullName>
                </value>
                <value>
                    <fullName>Art Supplies</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Audio / Video</fullName>
                </value>
                <value>
                    <fullName>Automatic Toner Replenishment (ATR)</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Binding/Booklet Services</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Brand Identity</fullName>
                </value>
                <value>
                    <fullName>Breakroom</fullName>
                </value>
                <value>
                    <fullName>Break Room</fullName>
                </value>
                <value>
                    <fullName>Cameras</fullName>
                </value>
                <value>
                    <fullName>Canon Hardware</fullName>
                </value>
                <value>
                    <fullName>Canon Services</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Charging Carts</fullName>
                </value>
                <value>
                    <fullName>Checks, forms, Envelopes, and Stamps</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Cleaning/Breakroom</fullName>
                </value>
                <value>
                    <fullName>Cleaning &amp; Maintenance</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Coffee Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Supplier_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Supplier/Vendor</label>
        <referenceTo>Product_Manufacturer__c</referenceTo>
        <relationshipLabel>Opportunity Product (Product Supplier/Vendor)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by a process builder when the product is added or changed.  Allows us to use rollup formulas on opps and accounts to count the number of recurring products sold.</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rollup_Update_Counter__c</fullName>
        <label>Rollup Update Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit__c</fullName>
        <formula>TotalPrice  - ( Unit_Cost__c *  Quantity )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Check_BSD_GT_Product_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),OR(ISCHANGED(Product_BSD__c),ISCHANGED(Product_GT__c)))</errorConditionFormula>
        <errorMessage>Product cannot be edited, please delete and add a new product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Unit_Price</fullName>
        <active>true</active>
        <description>02928433 - Validation Rules for Products Unit Price</description>
        <errorConditionFormula>IF(CONTAINS($Label.Opportunity_Product_Validation_on_Unit_Price,Opportunity.RecordType_Name__c),IF( UnitPrice = 0.0, true, false) , false)</errorConditionFormula>
        <errorMessage>Unit Price must be greater than 0.00</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Subtype_Required_for_Tech</fullName>
        <active>true</active>
        <description>Product Subtype is required when Tech Product is selected</description>
        <errorConditionFormula>(IF(AND(ISPICKVAL(Product_BSD__c,&quot;Tech&quot;), ISPICKVAL(Product_Subtype_BSD__c ,&quot;&quot;)),true,false))
&amp;&amp;
!CONTAINS(Opportunity.RecordType_Name__c,&apos;(Tech-Zone)&apos;)</errorConditionFormula>
        <errorMessage>Product Subtype is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TZ_Block_recur_cost_non_recur_product</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Product2.Recurring__c)
&amp;&amp; Monthly_Recurring_Unit_Cost__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Monthly_Recurring_Unit_Cost__c</errorDisplayField>
        <errorMessage>You cannot specify a Monthly Recurring Cost for a non-recurring product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TZ_Block_recur_price_non_recur_product</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Product2.Recurring__c)
&amp;&amp; Monthly_Recurring_Unit_Price__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Monthly_Recurring_Unit_Price__c</errorDisplayField>
        <errorMessage>You cannot specify a Monthly Recurring Price for a non-recurring product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TZ_Block_unit_cost_on_recurring_product</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.Recurring__c
&amp;&amp; Unit_Cost__c &gt; 0
&amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>Unit_Cost__c</errorDisplayField>
        <errorMessage>You cannot specify a Unit Cost for a recurring product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TZ_Block_unit_price_on_recurring_product</fullName>
        <active>true</active>
        <errorConditionFormula>Product2.Recurring__c
&amp;&amp; UnitPrice &gt; 0
&amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>You cannot specify a Unit Price for a recurring product.</errorMessage>
    </validationRules>
</CustomObject>